--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,28 @@ body{
   
     font-family: 'Mulish', sans-serif;
 }
+a {
+    color: #000;
+    position: relative;
+    text-decoration: none;
+  }
+  
+  a::before {
+    background: hsl(45 100% 70%);
+    content: "";
+    inset: 0;
+    position: absolute;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.5s ease-in-out;
+    z-index: -1;
+  }
+  
+  a:hover::before {
+    transform: scaleX(1);
+    transform-origin: left;
+  }
+  
 .slick-next{
     right:10px !important;
     border-top-right-radius: 7px !important;
